feature/add_currency

--- a/src/main/resources/static/css/tooplate-mini-finance.css
+++ b/src/main/resources/static/css/tooplate-mini-finance.css
@@ -11,7 +11,7 @@ https://www.tooplate.com/view/2135-mini-finance
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #E63946;
+  --primary-color:                #1ad165;
   --secondary-color:              #F1FAEE;
   --section-bg-color:             #ececec;
   --primary-bg-color:             #E63946;
