feature/add_currency

--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -11,28 +11,28 @@
     <div class="position-sticky py-4 px-3 sidebar-sticky">
         <ul class="nav flex-column h-100">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/}">
+                <a class="nav-link" th:href="@{/user/}">
                     <i class="bi-house-fill me-2"></i>
                     Overview
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/wallet}">
+                <a class="nav-link" th:href="@{/wallet/index}">
                     <i class="bi-wallet me-2"></i>
                     My Wallet
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/profile}">
+                <a class="nav-link" th:href="@{/user/profile}">
                     <i class="bi-person me-2"></i>
                     Profile
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" th:href="@{/setting}">
+                <a class="nav-link active" aria-current="page" th:href="@{/user/setting}">
                     <i class="bi-gear me-2"></i>
                     Settings
                 </a>
