--- a/src/main/resources/templates/user/help-center.html
+++ b/src/main/resources/templates/user/help-center.html
@@ -229,7 +229,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="wallet.html">
+                        <a class="nav-link" href="wallet/index.html">
                             <i class="bi-wallet me-2"></i>
                             My Wallet
                         </a>
