--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -293,7 +293,7 @@
                 </div>
 
                 <div class="border-top pt-4 mt-4 text-center">
-                    <a class="btn custom-btn" href="wallet.html">
+                    <a class="btn custom-btn" href="wallet/index.html">
                         View all transations
                         <i class="bi-arrow-up-right-circle-fill ms-2"></i>
                     </a>
