--- a/src/main/resources/templates/user/wallet/index.html
+++ b/src/main/resources/templates/user/wallet/index.html
@@ -375,7 +375,7 @@
 
                             <div>
                                 <p>
-                                    <a href="transation-detail.html">Daniel Jones</a>
+                                    <a href="../transation-detail.html">Daniel Jones</a>
                                 </p>
 
                                 <small class="text-muted">C2C Transfer</small>
@@ -395,7 +395,7 @@
 
                             <div>
                                 <p>
-                                    <a href="transation-detail.html">Public Bank</a>
+                                    <a href="../transation-detail.html">Public Bank</a>
                                 </p>
 
                                 <small class="text-muted">Mobile Reload</small>
@@ -414,7 +414,7 @@
                                  class="profile-image img-fluid" alt="">
 
                             <div>
-                                <p><a href="transation-detail.html">Store</a></p>
+                                <p><a href="../transation-detail.html">Store</a></p>
 
                                 <small class="text-muted">Payment Received</small>
                             </div>
