--- a/src/main/resources/templates/user/wallet/index.html
+++ b/src/main/resources/templates/user/wallet/index.html
@@ -18,6 +18,122 @@
             <h1 class="h2 mb-0">Wallet</h1>
         </div>
         <div class="row my-4">
+            <div class="col-lg-7 col-12">
+                <div class="custom-block custom-block-balance">
+                    <small>Your Balance</small>
+
+                    <h2 class="mt-2 mb-3">$254,800</h2>
+
+                    <div class="custom-block-numbers d-flex align-items-center">
+                        <span>****</span>
+                        <span>****</span>
+                        <span>****</span>
+                        <p>2560</p>
+                    </div>
+
+                    <div class="d-flex">
+                        <div>
+                            <small>Valid Date</small>
+                            <p>12/2028</p>
+                        </div>
+
+                        <div class="ms-auto">
+                            <small>Card Holder</small>
+                            <p>Thomas</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="custom-block custom-block-bottom d-flex flex-wrap">
+                    <div class="custom-block-bottom-item">
+                        <a href="#" class="d-flex flex-column">
+                            <i class="custom-block-icon bi-wallet"></i>
+
+                            <small>Add Wallet</small>
+                        </a>
+                    </div>
+
+                    <div class="custom-block-bottom-item">
+                        <a href="#" class="d-flex flex-column">
+                            <i class="custom-block-icon bi-upc-scan"></i>
+                            <small>Update</small>
+                        </a>
+                    </div>
+
+                    <div class="custom-block-bottom-item">
+                        <a href="#" class="d-flex flex-column">
+                            <i class="custom-block-icon bi-send"></i>
+
+                            <small>Send</small>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-5 col-12">
+                <div class="custom-block custom-block-transations">
+                    <h5 class="mb-4">Recent Transations</h5>
+
+                    <div class="d-flex flex-wrap align-items-center mb-4">
+                        <div class="d-flex align-items-center">
+                            <img src="images/profile/senior-man-white-sweater-eyeglasses.jpg"
+                                 class="profile-image img-fluid" alt="">
+
+                            <div>
+                                <p>
+                                    <a href="../transation-detail.html">Daniel Jones</a>
+                                </p>
+
+                                <small class="text-muted">C2C Transfer</small>
+                            </div>
+                        </div>
+
+                        <div class="ms-auto">
+                            <small>05/12/2023</small>
+                            <strong class="d-block text-danger"><span class="me-1">-</span> $250</strong>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-wrap align-items-center mb-4">
+                        <div class="d-flex align-items-center">
+                            <img src="images/profile/young-beautiful-woman-pink-warm-sweater.jpg"
+                                 class="profile-image img-fluid" alt="">
+
+                            <div>
+                                <p>
+                                    <a href="../transation-detail.html">Public Bank</a>
+                                </p>
+
+                                <small class="text-muted">Mobile Reload</small>
+                            </div>
+                        </div>
+
+                        <div class="ms-auto">
+                            <small>22/8/2023</small>
+                            <strong class="d-block text-success"><span class="me-1">+</span> $280</strong>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-wrap align-items-center">
+                        <div class="d-flex align-items-center">
+                            <img src="images/profile/young-woman-with-round-glasses-yellow-sweater.jpg"
+                                 class="profile-image img-fluid" alt="">
+
+                            <div>
+                                <p><a href="../transation-detail.html">Store</a></p>
+
+                                <small class="text-muted">Payment Received</small>
+                            </div>
+                        </div>
+
+                        <div class="ms-auto">
+                            <small>22/8/2023</small>
+                            <strong class="d-block text-success"><span class="me-1">+</span> $280</strong>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             <div class="col-lg-12 col-12">
                 <div class="custom-block bg-white">
                     <h5 class="mb-4">Account Activities</h5>
@@ -301,132 +417,6 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
-
-            <div class="col-lg-7 col-12">
-                <div class="custom-block custom-block-balance">
-                    <small>Your Balance</small>
-
-                    <h2 class="mt-2 mb-3">$254,800</h2>
-
-                    <div class="custom-block-numbers d-flex align-items-center">
-                        <span>****</span>
-                        <span>****</span>
-                        <span>****</span>
-                        <p>2560</p>
-                    </div>
-
-                    <div class="d-flex">
-                        <div>
-                            <small>Valid Date</small>
-                            <p>12/2028</p>
-                        </div>
-
-                        <div class="ms-auto">
-                            <small>Card Holder</small>
-                            <p>Thomas</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="custom-block custom-block-bottom d-flex flex-wrap">
-                    <div class="custom-block-bottom-item">
-                        <a href="#" class="d-flex flex-column">
-                            <i class="custom-block-icon bi-wallet"></i>
-
-                            <small>Top up</small>
-                        </a>
-                    </div>
-
-                    <div class="custom-block-bottom-item">
-                        <a href="#" class="d-flex flex-column">
-                            <i class="custom-block-icon bi-upc-scan"></i>
-
-                            <small>Scan & Pay</small>
-                        </a>
-                    </div>
-
-                    <div class="custom-block-bottom-item">
-                        <a href="#" class="d-flex flex-column">
-                            <i class="custom-block-icon bi-send"></i>
-
-                            <small>Send</small>
-                        </a>
-                    </div>
-
-                    <div class="custom-block-bottom-item">
-                        <a href="#" class="d-flex flex-column">
-                            <i class="custom-block-icon bi-arrow-down"></i>
-
-                            <small>Request</small>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-5 col-12">
-                <div class="custom-block custom-block-transations">
-                    <h5 class="mb-4">Recent Transations</h5>
-
-                    <div class="d-flex flex-wrap align-items-center mb-4">
-                        <div class="d-flex align-items-center">
-                            <img src="images/profile/senior-man-white-sweater-eyeglasses.jpg"
-                                 class="profile-image img-fluid" alt="">
-
-                            <div>
-                                <p>
-                                    <a href="../transation-detail.html">Daniel Jones</a>
-                                </p>
-
-                                <small class="text-muted">C2C Transfer</small>
-                            </div>
-                        </div>
-
-                        <div class="ms-auto">
-                            <small>05/12/2023</small>
-                            <strong class="d-block text-danger"><span class="me-1">-</span> $250</strong>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-wrap align-items-center mb-4">
-                        <div class="d-flex align-items-center">
-                            <img src="images/profile/young-beautiful-woman-pink-warm-sweater.jpg"
-                                 class="profile-image img-fluid" alt="">
-
-                            <div>
-                                <p>
-                                    <a href="../transation-detail.html">Public Bank</a>
-                                </p>
-
-                                <small class="text-muted">Mobile Reload</small>
-                            </div>
-                        </div>
-
-                        <div class="ms-auto">
-                            <small>22/8/2023</small>
-                            <strong class="d-block text-success"><span class="me-1">+</span> $280</strong>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-wrap align-items-center">
-                        <div class="d-flex align-items-center">
-                            <img src="images/profile/young-woman-with-round-glasses-yellow-sweater.jpg"
-                                 class="profile-image img-fluid" alt="">
-
-                            <div>
-                                <p><a href="../transation-detail.html">Store</a></p>
-
-                                <small class="text-muted">Payment Received</small>
-                            </div>
-                        </div>
-
-                        <div class="ms-auto">
-                            <small>22/8/2023</small>
-                            <strong class="d-block text-success"><span class="me-1">+</span> $280</strong>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </th:block>
