--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -20,7 +20,7 @@
         <div class="col-lg-7 col-12">
             <div class="custom-block custom-block-balance">
                 <small>Your Balance</small>
-                <h2 class="mt-2 mb-3">$254,800</h2>
+                <h2 class="mt-2 mb-3"><span></span></h2>
                 <div class="custom-block-numbers d-flex align-items-center">
                     <span>****</span>
                     <span>****</span>
