--- a/src/main/resources/templates/user/wallet/index.html
+++ b/src/main/resources/templates/user/wallet/index.html
@@ -11,7 +11,7 @@
     <th:block th:replace="layout/header.html::css"></th:block>
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="content" th:fragment="wallet">
     <div class="title-group mb-3">
         <h1 class="h2 mb-0">Wallet</h1>
     </div>
@@ -19,21 +19,19 @@
         <div class="col-lg-7 col-12">
             <div class="custom-block custom-block-balance">
                 <small>Your Balance</small>
-                <h2 class="mt-2 mb-3">$254,800</h2>
+                <h2 class="mt-2 mb-3"><span th:text="${currency.symbol}+${wallet.balance}"></span></h2>
                 <div class="custom-block-numbers d-flex align-items-center">
                     <span>****</span>
                     <span>****</span>
                     <span>****</span>
-                    <p>2560</p>
+                    <p></p>
                 </div>
                 <div class="d-flex">
                     <div>
                         <small>Valid Date</small>
-                        <p>12/2028</p>
+                        <p th:text="${wallet.createDate}"></p>
                     </div>
                     <div class="ms-auto">
-                        <small>Card Holder</small>
-                        <p>Thomas</p>
                     </div>
                 </div>
             </div>
