--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -11,7 +11,7 @@
     <div class="position-sticky py-4 px-3 sidebar-sticky">
         <ul class="nav flex-column h-100">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/user/}">
+                <a class="nav-link" th:href="@{/user/index}">
                     <i class="bi-house-fill me-2"></i>
                     Overview
                 </a>
@@ -25,21 +25,18 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/user/profile}">
                     <i class="bi-person me-2"></i>
-                    Profile
+                    Report
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" th:href="@{/user/setting}">
                     <i class="bi-gear me-2"></i>
-                    Settings
+                    Budget
                 </a>
             </li>
-            <li class="nav-item featured-box mt-lg-5 mt-4 mb-4">
-                <img src="images/credit-card.png" class="img-fluid" alt="">
-                <a class="btn custom-btn" href="#">Upgrade</a>
-            </li>
+
             <li class="nav-item border-top mt-auto pt-2">
-                <a class="nav-link" th:href="@{/logout}">
+                <a class="nav-link" th:href="@{/user/logout}">
                     <i class="bi-box-arrow-left me-2"></i>
                     Logout
                 </a>
