--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,12 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;700&display=swap" rel="stylesheet">
-   <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/bootstrap-icons.css" rel="stylesheet">
     <link href="/css/tooplate-mini-finance.css" rel="stylesheet">
-<!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/bootstrap-icons.css}" />
-    <link rel="stylesheet" th:href="@{/css/tooplate-mini-finance.css}" />-->
+    <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <link rel="stylesheet" th:href="@{/css/bootstrap-icons.css}" />
+        <link rel="stylesheet" th:href="@{/css/tooplate-mini-finance.css}" />-->
 </head>
 
 <body style="background-color: #ececec;">
@@ -25,7 +25,8 @@
         <div class="custom-block bg-white">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button style="margin-left: 130px;width: 300px;color: #3b5998" class="nav-link active" id="profile-tab"
+                    <button style="margin-left: 130px;width: 300px;color: #3b5998" class="nav-link active"
+                            id="profile-tab"
                             data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab"
                             aria-controls="profile-tab-pane" aria-selected="true">Đăng nhập
                     </button>
@@ -36,27 +37,29 @@
                      aria-labelledby="profile-tab" tabindex="0">
                     <h6 class="mb-4">MoneyLover</h6>
                     <form class="custom-form profile-form" th:action="@{/loginn}" th:object="${user}" method="post">
-                         <div th:if="${param.logoutSuccess}">
-                               <p>Đăng xuất thành công!</p>
-                           </div>
-                           <div th:if="${registrationSuccess}">
-                               <div class="alert alert-success" role="alert">
-                                   Đăng ký thành công! Vui lòng đăng nhập.
-                               </div>
-                           </div>
-                           <div th:if="${errorMessage}" class="error-message">
-                               <span th:text="${errorMessage}"></span>
-                           </div>
-                           <div th:if="${session.errorMessage}">
-                               <span style="color: red" th:text="${session.errorMessage}" class="error-message"></span>
-                           </div>
+                        <div th:if="${param.logoutSuccess}">
+                            <p>Đăng xuất thành công!</p>
+                        </div>
+                        <div th:if="${registrationSuccess}">
+                            <div class="alert alert-success" role="alert">
+                                Đăng ký thành công! Vui lòng đăng nhập.
+                            </div>
+                        </div>
+                        <div th:if="${errorMessage}" class="error-message">
+                            <span th:text="${errorMessage}"></span>
+                        </div>
+                        <div th:if="${session.errorMessage}">
+                            <span style="color: red" th:text="${session.errorMessage}" class="error-message"></span>
+                        </div>
                         <input class="form-control" type="username" name="username" id="username"
                                placeholder="username">
                         <input class="form-control" type="password" name="password" id="password"
                                placeholder="password">
                         <div class="form-check d-flex justify-content-start mb-4">
-                            <input style="    border-radius: 1.25em; " class="form-check-input" type="checkbox" id="rememberMe" name="rememberMe" th:checked="${rememberMe}"/>
-                            <label style="margin-left: 10px" class="form-check-label" for="rememberMe"> Nhớ mật khẩu </label>
+                            <input style="    border-radius: 1.25em; " class="form-check-input" type="checkbox"
+                                   id="rememberMe" name="remember-me" th:checked="${param['remember-me']}"/>
+                            <label style="margin-left: 10px" class="form-check-label" for="rememberMe"> Nhớ mật
+                                khẩu </label>
                         </div>
                         <div class="d-flex">
                             <button style="margin-left: 20px" type="submit" class="form-control me-3">
