--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -137,19 +137,17 @@
         <div class="col-lg-5 col-12">
             <div class="custom-block custom-block-profile-front custom-block-profile text-center bg-white">
                 <div class="custom-block-profile-image-wrap mb-4">
-                    <img src="images/medium-shot-happy-man-smiling.jpg"
-                         class="custom-block-profile-image img-fluid" alt="">
+                    <img th:src="${user.image}" alt="User Image"
+                         class="custom-block-profile-image img-fluid">
                     <a href="setting.html" class="bi-pencil-square custom-block-edit-icon"></a>
                 </div>
                 <p class="d-flex flex-wrap mb-2">
                     <strong>Name:</strong>
-                    <span>Thomas Edison</span>
+                    <span th:text="${user.username}"></span>
                 </p>
                 <p class="d-flex flex-wrap mb-2">
                     <strong>Email:</strong>
-                    <a href="#">
-                        thomas@site.com
-                    </a>
+                    <a href="#" th:text="${user.email}"/>
                 </p>
                 <p class="d-flex flex-wrap mb-0">
                     <strong>Phone:</strong>
