feat: Implement authentication

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -172,27 +172,32 @@
             <div class="dropdown px-3">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                    aria-expanded="false">
-                    <img src="images/medium-shot-happy-man-smiling.jpg" class="profile-image img-fluid" alt="">
+                    <img th:src="${user.image}" alt="User Image" class="profile-image img-fluid" >
                 </a>
                 <ul class="dropdown-menu bg-white shadow">
                     <li>
                         <div class="dropdown-menu-profile-thumb d-flex">
-                            <img src="images/medium-shot-happy-man-smiling.jpg" class="profile-image img-fluid me-3"
-                                 alt="">
+                            <img th:src="${user.image}" alt="User Image" class="profile-image img-fluid me-3"
+                                 >
                             <div class="d-flex flex-column">
-                                <small>Thomas</small>
-                                <a href="#">thomas@site.com</a>
+                                <small>
+                                    <div th:if="${user.username}">
+                                        <span th:text="${user.username}"></span>
+                                    </div>
+                                </small>
+                                 <a href="#" th:text="${user.email}">
+                                </a>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="profile.html">
+                        <a class="dropdown-item" th:href="@{/user/profile}">
                             <i class="bi-person me-2"></i>
                             Profile
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="setting.html">
+                        <a class="dropdown-item" th:href="@{/user/setting}">
                             <i class="bi-gear me-2"></i>
                             Settings
                         </a>
@@ -204,7 +209,7 @@
                         </a>
                     </li>
                     <li class="border-top mt-3 pt-2 mx-4">
-                        <a class="dropdown-item ms-0 me-0" href="#">
+                        <a class="dropdown-item ms-0 me-0" th:href="@{/user/logout}">
                             <i class="bi-box-arrow-left me-2"></i>
                             Logout
                         </a>
