--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -37,17 +37,13 @@
                                class="form-control" placeholder="Họ:">
                         <input type="text" id="lastName" name="lastName" th:field="*{lastName}" required
                                placeholder="Tên:" class="form-control">
-                        <input type="date" id="birthday" name="birthday">
+                        <input class="form-control" type="date" id="birthday" name="birthday" th:value="${user.birthday}">
                         <input type="email" id="email" name="email" th:field="*{email}" required
                                class="form-control" placeholder="Email:">
-                        <div th:if="${error}">
-                            <p th:text="${error}" style="color: red"></p>
-                        </div>
+                            <p th:text="${erroremail}" style="color: red"></p>
                         <input type="text" id="name" name="name" th:field="*{username}" required
                                class="form-control" placeholder="Tên đăng nhập:">
-                        <div th:if="${error}">
-                            <p th:text="${error}" style="color: red"></p>
-                        </div>
+                            <p th:text="${errorusername}" style="color: red"></p>
                         <input type="password" id="password" name="password" required
                                class="form-control" placeholder="Mật khẩu:">
                         <div class="d-flex">
@@ -90,6 +86,7 @@
         return day + "/" + month + "/" + year;
     }
 </script>
+<!-- JAVASCRIPT FILES -->
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/js/custom.js"></script>
